Now only new commits towards the previous release are added to the release as "new commits", refactored redundant code and added tests for services with logic